<resources>
    <string name="app_name">Taswaq</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_your_product">Search Your Product</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="featured">Featured</string>
    <string name="best_seller">Best Seller</string>
    <string name="rate">Rate</string>
    <string name="reviews">Reviews</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_to_taswaq">Welcome to Taswaq</string>
    <string name="explore_with_us">Sign in to Explore us</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="order_date">Order Date</string>
    <string name="order_status">Order Status</string>
    <string name="total_price">Total Price</string>
    <string name="order_details">Order Details</string>
    <string name="shipped">Shipped</string>
    <string name="ordered">Ordered</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="shipping">Shipping</string>
    <string name="cancelled">Cancelled</string>
    <string name="cart">Cart</string>
    <string name="continue_word">Continue</string>
    <string name="item_image">Item Image</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="create_address">Create Address</string>
    <string name="notes">Notes</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="address_lane">Address lane</string>
    <string name="name">Name</string>
    <string name="continue_to_payment">Continue To Payment</string>
    <string name="addresses">Addresses</string>
    <string name="cards">Cards</string>
    <string name="update_profile">Update Profile</string>
    <string name="payment">Payment</string>
</resources>