<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center"
            android:text="@string/welcome_to_taswaq"
            android:textColor="@color/text_gray_434343"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/explore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/explore_with_us"
            android:textColor="@color/text_gray_434343"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toBottomOf="@id/welcome" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dot_blue"
            android:src="@drawable/ic_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/text_gray_434343"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:paddingHorizontal="@dimen/_80sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@id/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>