<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_124sdp">

        <ImageView
            android:id="@+id/order_thumbnail"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="@dimen/_12sdp"
            android:background="@color/blue_667EEA"
            android:src="@drawable/ic_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/titles_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/order_thumbnail"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_date"
                android:textColor="@color/text_gray_434343"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_status"
                android:textColor="@color/text_gray_434343"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textColor="@color/text_gray_434343"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/titles_container"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/order_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="15/7/1998"
                android:textColor="@color/text_gray_434343"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/order_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bending"
                android:textColor="@color/text_gray_434343"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/order_total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$50.00"
                android:textColor="@color/text_gray_434343"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/order_details"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:cornerRadius="8dp"
            app:layout_constraintStart_toEndOf="@id/order_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/titles_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>